--- a/src/styles/pages/_logement.scss
+++ b/src/styles/pages/_logement.scss
@@ -24,6 +24,7 @@
             display: flex;
             gap: 10px;
             li {
+                list-style: none;
                 text-align: center;
                 background: $color1;
                 color:$colorwhite;
@@ -45,6 +46,7 @@
             h3 {
                 display:flex;
                 flex-direction: column;
+                text-align: end;
             }
             
             img {
